@startuml 06_lips_classes
title Lips Detection – Main Classes

class LipsDetectionScreen {
  - _extractor : MediaPipeFaceLandmarkExtractor
  - _encoder : CameraFrameEncoder
  - _lipsingDetector : LipsingDetector
  - _lipLetterDetector : LipLetterDetector
  - _result : FaceLipsResult
  --
  + _setup()
  + _onCameraFrame()
}

class CameraFrameEncoder {
  + encodeToJpeg(image, quality) : Uint8List?
}

class MediaPipeFaceLandmarkExtractor {
  - _channel : MethodChannel
  --
  + initialize()
  + processFrame(bytes, width, height) : FaceLipsResult
}

class LipsingDetector {
  - _isLipsing : bool
  - _history : List
  --
  + isLipsing : bool
  + update(raw) : FaceLipsResult
  + reset()
}

class LipLetterDetector {
  - _displayedLetter : String?
  --
  + update(raw) : FaceLipsResult
  + reset()
}

class FaceLipsResult {
  + faceDetected : bool
  + mouthOpen : double
  + mouthPucker : double
  + smile : double
  + isLipsing : bool
  + detectedLetter : String?
  + letterConfidence : double
  --
  + copyWith(...)
}

LipsDetectionScreen --> CameraFrameEncoder
LipsDetectionScreen --> MediaPipeFaceLandmarkExtractor
LipsDetectionScreen --> LipsingDetector
LipsDetectionScreen --> LipLetterDetector

LipsingDetector ..> FaceLipsResult : uses
LipLetterDetector ..> FaceLipsResult : uses
MediaPipeFaceLandmarkExtractor ..> FaceLipsResult : creates

@enduml
